--- a/arch/arm64/configs/lineageos_axon7_defconfig
+++ b/arch/arm64/configs/lineageos_axon7_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-baddar"
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -72,12 +72,27 @@ CONFIG_PM_RUNTIME=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=100
+CONFIG_WAKE_BOOST_DURATION_MS=1500
+CONFIG_INPUT_BOOST_FREQ_LP=844800
+CONFIG_INPUT_BOOST_FREQ_PERF=748800
+CONFIG_REMOVE_INPUT_BOOST_FREQ_LP=307200
+CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=307200
+# CONFIG_CPU_BOOST is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
